--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
                 <li><strong>Youtube</strong> - Watch the videoclip of the searched song.</li>
                 <li><strong>Spotify</strong> - Search and obtain information from songs, artist or albums. Also, listening to the song and adding an album (or a song if you prefer) to your playlist is possible too.</li>
                 <li><strong>SongKick</strong> - Look for the latest concerts of an artist.</li>
-                <li><strong>MediaWiki</strong> - Obtain the biography of the artists.</li>
+                <li><strong>Wikipedia</strong> - Obtain the biography of the artists.</li>
                 <li><strong>Facebook</strong> - Share lyrics with yours followers and see the latest posts of artists' profiles.</li>
                 <li><strong>Image Color Extraction</strong> - Obtain the primary color of an image and use it as a background color.</li>
                 <li><strong>MusicXMatch</strong> - Get the lyrics of a song and display them.</li>
