Changed the action page

--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
     </header>
     <main>
       <img id="logo" name="logo" src="img/logo.png" width="50%" alt="Logo">
-      <form id="search" action="" method="get">
+      <form id="search" action="/SearchController" method="get">
         <input type="text" name="search" placeholder="Search" />
         <input type="submit" value="Go!" />
       </form>
